--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Sign Up</title>
+    <title>SignUp</title>
     <link rel="stylesheet" href="CSS/first-web.css" href="CSS/new-signup.css" />
   </head>
 
@@ -12,12 +12,14 @@
       <img id="logo" src="EPL.png" alt="Logo" />
       <form class="center-column-items">
         <input
+          class="texts"
           type="text"
           name="First Name"
           placeholder="Please Enter First Name"
           required
         />
         <input
+          class="texts"
           type="text"
           name="Second Name"
           placeholder="Please Enter Second Name"
@@ -25,6 +27,7 @@
         />
 
         <input
+          class="texts"
           type="password"
           name="password"
           placeholder="Create Your Password"
@@ -32,6 +35,7 @@
           id="new-password"
         />
         <input
+          class="texts"
           type="password"
           name="password"
           placeholder="Confirm Your Password"
@@ -40,7 +44,7 @@
         />
         <!-- <input type="submit" value="Log In" class="login" /> -->
 
-        <input type="submit" value="Sign Up" class="signup" />
+        <input type="submit" value="Sign Up" class="texts signup" />
       </form>
     </div>
   </body>
