--- a/Liverpool.html
+++ b/Liverpool.html
@@ -9,27 +9,35 @@
   <body>
     <div class="center-column-items">
       <div>
-        <img src="Liverpool/Liverpool_FC.svg.png" alt="" class="topright" />
+        <img
+          src="Images/Liverpool/Liverpool_FC.svg.png"
+          alt=""
+          class="topright"
+        />
       </div>
       <div>
-        <img src="Liverpool/Liverpool_FC.svg.png" alt="" class="topleft" />
+        <img
+          src="Images/Liverpool/Liverpool_FC.svg.png"
+          alt=""
+          class="topleft"
+        />
       </div>
       <div style="width: 70%; margin-right: 31px">
         <div class="unique">
           <h4>MANGER</h4>
           <p>Jürgen Klopp</p>
           <p>2015-present</p>
-          <img src="Liverpool/113.jpg" alt="" />
+          <img src="Images/Liverpool/113.jpg" alt="" />
         </div>
 
         <div class="unique">
           <h4>GOALKEEPERS</h4>
           <p>
-            <img src="Liverpool/alisson-becker-442.jpg" alt="" />
+            <img src="Images/Liverpool/alisson-becker-442.jpg" alt="" />
             ALISSON BECKER
           </p>
           <p>
-            <img src="Liverpool/194911.png" alt="" />
+            <img src="Images/Liverpool/194911.png" alt="" />
             ADRIAN
           </p>
         </div>
@@ -38,38 +46,38 @@
           <h4>DEFENDERS</h4>
 
           <p>
-            <img src="Liverpool/61043456.png" alt="" />
+            <img src="Images/Liverpool/61043456.png" alt="" />
             ANDY ROBERTSON
           </p>
 
           <p>
-            <img src="Liverpool/203376.png" alt="" />
+            <img src="Images/Liverpool/203376.png" alt="" />
             VIRGIL VAN DIJK
           </p>
 
           <p>
-            <img src="Liverpool/bl15544642282722.png" alt="" />
+            <img src="Images/Liverpool/bl15544642282722.png" alt="" />
             JOEL MATIP
           </p>
 
           <p>
-            <img src="Liverpool/48037822.png" alt="" />
+            <img src="Images/Liverpool/48037822.png" alt="" />
             IBRAHIMA KONATE
           </p>
 
           <p>
-            <img src="Liverpool/321717.jpg" alt="" />
+            <img src="Images/Liverpool/321717.jpg" alt="" />
             KOSTAS TSIMIKAS
           </p>
 
           <p>
-            <img src="Liverpool/29115800.png" alt="" />
+            <img src="Images/Liverpool/29115800.png" alt="" />
             JOE GOMEZ
           </p>
 
           <p>
             <img
-              src="Liverpool/UcxHcU5KHXlB2xU2XRChI2BltAiNjSckzoNSzks4.png"
+              src="Images/Liverpool/UcxHcU5KHXlB2xU2XRChI2BltAiNjSckzoNSzks4.png"
               alt=""
             />
             TRENT ALEXANDER-ARNOLD
@@ -80,39 +88,41 @@
           <h4>MIDFIELDERS</h4>
 
           <p>
-            <img src="Liverpool/images (1).jpg" alt="" />
+            <img src="Images/Liverpool/images (1).jpg" alt="" />
             JORDAN HENDERSON
           </p>
 
           <p>
-            <img src="Liverpool/download.jpg" alt="" />
+            <img src="Images/Liverpool/download.jpg" alt="" />
             THIAGO ALCANTARA
           </p>
           <p>
-            <img src="Liverpool/209499.png" alt="" />
+            <img src="Images/Liverpool/209499.png" alt="" />
             FABINHO
           </p>
           <p>
-            <img src="Liverpool/220971.png" alt="" />
+            <img src="Images/Liverpool/220971.png" alt="" />
             NABY KEITA
           </p>
           <p>
-            <img src="Liverpool/28046572.png" alt="" />
+            <img src="Images/Liverpool/28046572.png" alt="" />
             ALEX OXLADE-CHAMBERLAIN
           </p>
           <p>
-            <img src="Liverpool/5106363.png" alt="" />
+            <img src="Images/Liverpool/5106363.png" alt="" />
             JAMES MILNER
           </p>
         </div>
 
         <div class="unique">
           <h4>FORWARDS</h4>
-          <p><img src="Liverpool/76049803.png" alt="" />LUIS DIAZ</p>
-          <p><img src="Liverpool/201942.png" alt="" /> ROBERTO FIRMINO</p>
-          <p><img src="Liverpool/p224458.png" alt="" />DIOGO JOTA</p>
-          <p><img src="Liverpool/images.jpg" alt="" />DARWIN NUNEZ</p>
-          <p><img src="Liverpool/209331.png" alt="" /> MOHAMED SALAH</p>
+          <p><img src="Images/Liverpool/76049803.png" alt="" />LUIS DIAZ</p>
+          <p>
+            <img src="Images/Liverpool/201942.png" alt="" /> ROBERTO FIRMINO
+          </p>
+          <p><img src="Images/Liverpool/p224458.png" alt="" />DIOGO JOTA</p>
+          <p><img src="Images/Liverpool/images.jpg" alt="" />DARWIN NUNEZ</p>
+          <p><img src="Images/Liverpool/209331.png" alt="" /> MOHAMED SALAH</p>
         </div>
       </div>
     </div>
