--- a/Mancity.html
+++ b/Mancity.html
@@ -11,59 +11,62 @@
       <h4>MANGER</h4>
       <p>Pep Guardiola</p>
       <p>2016-present</p>
-      <img src="Mancity club/download.jpg" alt="" />
+      <img src="Images/Mancity Club/download.jpg" alt="" />
     </div>
 
     <div>
       <h4>GOALKEEPERS</h4>
-      <p><img src="Mancity club/210257.png" alt="" />Ederson</p>
-      <p><img src="Mancity club/91156033.png" alt="" />Zack Steffen</p>
+      <p><img src="Images/Mancity Club/210257.png" alt="" />Ederson</p>
+      <p><img src="Images/Mancity Club/91156033.png" alt="" />Zack Steffen</p>
     </div>
 
     <div>
       <h4>DEFENDERS</h4>
-      <p><img src="Mancity club/250010259.jpg" alt="" />Kyle Walker</p>
-      <p><img src="Mancity club/239818.png" alt="" />Ruben Dias</p>
-      <p><img src="Mancity club/28060397.png" alt="" />John Stones</p>
-      <p><img src="Mancity club/p208920.png" alt="" />Nathan Ake</p>
-      <p><img src="Mancity club/55041623.png" alt="" />Joao Cancelo</p>
+      <p><img src="Images/Mancity Club/250010259.jpg" alt="" />Kyle Walker</p>
+      <p><img src="Images/Mancity Club/239818.png" alt="" />Ruben Dias</p>
+      <p><img src="Images/Mancity Club/28060397.png" alt="" />John Stones</p>
+      <p><img src="Images/Mancity Club/p208920.png" alt="" />Nathan Ake</p>
+      <p><img src="Images/Mancity Club/55041623.png" alt="" />Joao Cancelo</p>
     </div>
 
     <div>
       <h4>MIDFIELDERS</h4>
-      <p><img src="Mancity club/images.jpg" alt="" />Rodrigo</p>
+      <p><img src="Images/Mancity Club/images.jpg" alt="" />Rodrigo</p>
       <p>
         <img
-          src="Mancity club/10114f7cb137852fc6c2403e7828e2bcGundogan.png"
+          src="Images/Mancity Club/10114f7cb137852fc6c2403e7828e2bcGundogan.png"
           alt=""
         />
         IIkay Gündogan
       </p>
       <p>
-        <img src="Mancity club/bl1622836691622.png" alt="" /> Kevin De Bruyne
+        <img src="Images/Mancity Club/bl1622836691622.png" alt="" /> Kevin De
+        Bruyne
       </p>
 
-      <p><img src="Mancity club/28067800.png" alt="" />Jack Grealish</p>
-      <p><img src="Mancity club/28108494.png" alt="" />Phil Foden</p>
-      <p><img src="Mancity club/55041632.png" alt="" />Bernardo Silva</p>
-      <p><img src="Mancity club/29113879.png" alt="" />Kalvin Phillips</p>
+      <p><img src="Images/Mancity Club/28067800.png" alt="" />Jack Grealish</p>
+      <p><img src="Images/Mancity Club/28108494.png" alt="" />Phil Foden</p>
+      <p><img src="Images/Mancity Club/55041632.png" alt="" />Bernardo Silva</p>
+      <p>
+        <img src="Images/Mancity Club/29113879.png" alt="" />Kalvin Phillips
+      </p>
     </div>
 
     <div>
       <h4>FORWARDS</h4>
       <p>
         <img
-          src="Mancity club/ohatta_players_europe_manchester_city_riyad_mahrez.jpg"
+          src="Images/Mancity Club/ohatta_players_europe_manchester_city_riyad_mahrez.jpg"
           alt=""
         />
         Riyad Mahrez
       </p>
       <p>
-        <img src="Mancity club/Erling_Haaland.1.png" alt="" />
+        <img src="Images/Mancity Club/Erling_Haaland.1.png" alt="" />
         Erling Haaland
       </p>
       <p>
-        <img src="Mancity club/14183207.png" alt="" />
+        <img src="Images/Mancity Club/14183207.png" alt="" />
         Julian Alvarez
       </p>
     </div>
