--- a/premier-league-table.html
+++ b/premier-league-table.html
@@ -11,7 +11,7 @@
       function redirectTo(name) {
         if (name === "Mancity") {
           window.location.href = "http://127.0.0.1:5500/mancity.html";
-        } else if (name === "Liverpool") {
+        } else if (name === "Images/Liverpool") {
           window.location.href = "http://127.0.0.1:5500/liverpool.html";
         } else {
           alert("Coming soon");
@@ -23,7 +23,7 @@
   <body>
     <p style="background-color: darkmagenta; color: white">
       Preimer leauge Table
-      <img src="Clubs/Flag_of_England.svg.png" alt="" class="england" />
+      <img src="Images/Clubs/Flag_of_England.svg.png" alt="" class="england" />
     </p>
 
     <div>
@@ -45,12 +45,12 @@
         <div>
           <tr>
             <td class="first-four">1</td>
-            <td
-              class="team"
-              onclick="redirectTo('Arsenal')"
-              onclick="redirectTo('Mancity')"
-            >
-              <img src="Clubs/Manchester_City_FC.png" alt="" class="club" />
+            <td class="team" onclick="redirectTo('Mancity')">
+              <img
+                src="Images/Clubs/Manchester_City_FC.png"
+                alt=""
+                class="club"
+              />
               Mancity
             </td>
             <td>2</td>
@@ -65,7 +65,7 @@
             <td class="first-four">2</td>
             <td class="team" onclick="redirectTo('Arsenal')">
               <img
-                src="Clubs/arsenal-logo-B27C071FE1-seeklogo.com.png"
+                src="Images/Clubs/arsenal-logo-B27C071FE1-seeklogo.com.png"
                 alt=""
                 class="club"
               />
@@ -102,7 +102,11 @@
           <tr>
             <td class="first-four">4</td>
             <td class="team" onclick="redirectTo('Tottenham')">
-              <img src="Clubs/Tottenham_Hotspur.svg.png" alt="" class="club" />
+              <img
+                src="Images/Clubs/Tottenham_Hotspur.svg.png"
+                alt=""
+                class="club"
+              />
               Tottenham
             </td>
             <td>2</td>
@@ -120,7 +124,7 @@
           <td class="to-europa">5</td>
           <td class="team" onclick="redirectTo('Newcastle')">
             <img
-              src="Clubs/Newcastle_United_Logo.svg.png"
+              src="Images/Clubs/Newcastle_United_Logo.svg.png"
               alt=""
               class="club"
             />
@@ -138,7 +142,7 @@
           <td>6</td>
           <td class="team" onclick="redirectTo('Leeds united')">
             <img
-              src="Clubs/Leeds_United_F.C._logo.svg.png"
+              src="Images/Clubs/Leeds_United_F.C._logo.svg.png"
               alt=""
               class="club"
             />
@@ -155,7 +159,7 @@
         <tr>
           <td>7</td>
           <td class="team" onclick="redirectTo('Chelsea')">
-            <img src="Clubs/Chelsea_FC.svg.png" alt="" class="club" />
+            <img src="Images/Clubs/Chelsea_FC.svg.png" alt="" class="club" />
             Chelsea
           </td>
           <td>2</td>
@@ -170,7 +174,7 @@
           <td>8</td>
           <td class="team" onclick="redirectTo('Brighton')">
             <img
-              src="Clubs/Brighton_&_Hove_Albion_logo.svg.png"
+              src="Images/Clubs/Brighton_&_Hove_Albion_logo.svg.png"
               alt=""
               class="club"
             />
@@ -188,7 +192,7 @@
           <td>9</td>
           <td class="team" onclick="redirectTo('Aston Villa')">
             <img
-              src="Clubs/Aston_Villa_FC_crest_(2016).svg.png"
+              src="Images/Clubs/Aston_Villa_FC_crest_(2016).svg.png"
               alt=""
               class="club"
             />
@@ -206,7 +210,7 @@
           <td>10</td>
           <td class="team" onclick="redirectTo('Nottm Forset')">
             <img
-              src="Clubs/1200px-Nottingham_Forest_logo.svg.png"
+              src="Images/Clubs/1200px-Nottingham_Forest_logo.svg.png"
               alt=""
               class="club"
             />
@@ -224,7 +228,7 @@
           <td>11</td>
           <td class="team" onclick="redirectTo('Bournemouth')">
             <img
-              src="Clubs/AFC_Bournemouth_(2013).svg.png"
+              src="Images/Clubs/AFC_Bournemouth_(2013).svg.png"
               alt=""
               class="club"
             />
@@ -241,7 +245,7 @@
         <tr>
           <td>12</td>
           <td class="team" onclick="redirectTo('Liverpool')">
-            <img src="Clubs/Liverpool_FC.svg.png" alt="" class="club" />
+            <img src="Images/Clubs/Liverpool_FC.svg.png" alt="" class="club" />
             Liverpool
           </td>
           <td>2</td>
@@ -256,7 +260,7 @@
           <td>13</td>
           <td class="team" onclick="redirectTo('Fulham')">
             <img
-              src="Clubs/fulham-fc-logo-EBBC39136A-seeklogo.com.png"
+              src="Images/Clubs/fulham-fc-logo-EBBC39136A-seeklogo.com.png"
               alt=""
               class="club"
             />
@@ -274,7 +278,7 @@
           <td>14</td>
           <td class="team" onclick="redirectTo('Wolves')">
             <img
-              src="Clubs/Wolverhampton_Wanderers.svg.png"
+              src="Images/Clubs/Wolverhampton_Wanderers.svg.png"
               alt=""
               class="club"
             />
@@ -291,7 +295,11 @@
         <tr>
           <td>15</td>
           <td class="team" onclick="redirectTo('Leicter City')">
-            <img src="Clubs/Leicester_City_crest.svg.png" alt="" class="club" />
+            <img
+              src="Images/Clubs/Leicester_City_crest.svg.png"
+              alt=""
+              class="club"
+            />
             Leicter City
           </td>
           <td>2</td>
@@ -306,7 +314,7 @@
           <td>16</td>
           <td class="team" onclick="redirectTo('Crystal Palace')">
             <img
-              src="Clubs/Crystal_Palace_FC_logo.svg.png"
+              src="Images/Clubs/Crystal_Palace_FC_logo.svg.png"
               alt=""
               class="club"
             />
@@ -323,7 +331,11 @@
         <tr>
           <td>17</td>
           <td class="team" onclick="redirectTo('Southampton')">
-            <img src="Clubs/FC_Southampton.svg.png" alt="" class="club" />
+            <img
+              src="Images/Clubs/FC_Southampton.svg.png"
+              alt=""
+              class="club"
+            />
             Southampton
           </td>
           <td>2</td>
@@ -338,7 +350,7 @@
           <td class="Relegation">18</td>
           <td class="team" onclick="redirectTo('Everton')">
             <img
-              src="Clubs/1200px-Everton_FC_logo.svg.png"
+              src="Images/Clubs/1200px-Everton_FC_logo.svg.png"
               alt=""
               class="club"
             />
@@ -356,7 +368,7 @@
           <td class="Relegation">19</td>
           <td class="team" onclick="redirectTo('West Ham')">
             <img
-              src="Clubs/1200px-West_Ham_United_FC_logo.svg.png"
+              src="Images/Clubs/1200px-West_Ham_United_FC_logo.svg.png"
               alt=""
               class="club"
             />
@@ -374,7 +386,7 @@
           <td class="Relegation">20</td>
           <td class="team" onclick="redirectTo('Man United')">
             <img
-              src="Clubs/Manchester_United_FC_crest.svg.png"
+              src="Images/Clubs/Manchester_United_FC_crest.svg.png"
               alt=""
               class="club"
             />
