--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="center-column-items">
-      <img id="logo" src="EPL.png" alt="Logo" />
+      <img id="logo" src="Images/EPL.png" alt="Logo" />
       <form class="center-column-items">
         <input
           class="texts"
